[gd_scene load_steps=9 format=3 uid="uid://da88vxp30pkc2"]

[ext_resource type="Script" path="res://SCRIPTS/game_over.gd" id="1_eq4kw"]
[ext_resource type="Shader" path="res://SCRIPTS/main_menu.gdshader" id="1_qovre"]
[ext_resource type="Texture2D" uid="uid://crlddylnp01h7" path="res://ASSETS/ART/UI/PokemonBackground.png" id="2_tktx3"]
[ext_resource type="FontFile" uid="uid://dh4gt4fohkhhm" path="res://ASSETS/ART/UI/LuckiestGuy-Regular.ttf" id="3_hb3j8"]
[ext_resource type="Texture2D" uid="uid://cag4er0cx1bui" path="res://ASSETS/ART/UI/MenuPics/LargeButton/UI-01.png" id="4_w6j8g"]
[ext_resource type="Texture2D" uid="uid://c6pkkfa8xny86" path="res://ASSETS/ART/UI/MenuPics/LargeButton/UI-04.png" id="5_tgd12"]
[ext_resource type="Texture2D" uid="uid://cauqxaxpr5c48" path="res://ASSETS/ART/UI/MenuPics/LargeButton/UI-03.png" id="6_vfsak"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sj4e3"]
shader = ExtResource("1_qovre")
shader_parameter/speed = 0.1

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eq4kw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.341176, 1, 1)

[node name="PokemonScrolling" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_sj4e3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tktx3")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 0.8, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -379.0
offset_top = -270.0
offset_right = 394.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_hb3j8")
theme_override_font_sizes/font_size = 150
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 311.0
offset_right = 1256.0
offset_bottom = 517.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_w6j8g")
texture_pressed = ExtResource("5_tgd12")
texture_hover = ExtResource("6_vfsak")

[node name="Label" type="Label" parent="MainMenuButton"]
modulate = Color(0, 0.341176, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 464.0
offset_right = 1257.0
offset_bottom = 670.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_w6j8g")
texture_pressed = ExtResource("5_tgd12")
texture_hover = ExtResource("6_vfsak")

[node name="Label" type="Label" parent="ExitButton"]
modulate = Color(0, 0.341176, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighscoreLabel" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 504.0
offset_top = 216.0
offset_right = 822.0
offset_bottom = 291.0
theme_override_font_sizes/font_size = 50
text = "HIGHSCORE: 0"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
